--- a/index.html
+++ b/index.html
@@ -405,13 +405,13 @@
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                                     <ul class="social-icon">
-                                        <li class="social-icon-item"><a href="https://twitter.com/minthu" class="social-icon-link bi-twitter"></a></li>
+                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-twitter"></a></li>
 
                                         <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
 
                                         <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
 
-                                        <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li>
+                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-youtube"></a></li>
                                     </ul>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Start a project</strong>
