--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta name="description" content="">
-        <meta name="author" content="TemplateMo">
+        <meta name="author" content="Template">
 
         <title>First Portfolio Bootstrap</title>
 
@@ -47,7 +47,7 @@
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
                     <a class="custom-btn btn" href="#section_5">
-                        120-240-9600
+                        081-3116-5806
                     </a>
                 </div>
 
@@ -77,7 +77,7 @@
                     <div class="d-lg-flex align-items-center d-none ms-auto">
                         <i class="navbar-icon bi-telephone-plus me-3"></i>
                         <a class="custom-btn btn" href="#section_5">
-                            120-240-9600
+                            081-3116-5806
                         </a>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
 
                                     <p>
                                         <span class="profile-small-title">Phone</span> 
-                                         <span><a href="tel: 305-240-9671">120-240-9600</a></span>
+                                         <span><a href="tel: 081-3116-5806">081-3116-5806</a></span>
                                     </p>
 
                                     <p>
@@ -436,8 +436,8 @@
                                     <strong class="site-footer-title d-block mt-4 mb-3">Call</strong>
 
                                     <p class="mb-0">
-                                        <a href="tel: 120-240-9600">
-                                            120-240-9600
+                                        <a href="tel: 081-3116-5806">
+                                            081-3116-5806
                                         </a>
                                     </p>
                                 </div>
@@ -556,4 +556,5 @@
         <script src="js/custom.js"></script>
 
     </body>
+
 </html>
